Ampliación resumen tema 1

--- a/tema01.tex
+++ b/tema01.tex
@@ -1,9 +1,27 @@
 Resumen Tema 1
 
+Definición sistema en tiempo real:
+
+Cualquier sistema en el que el tiempo en el que se produce la salida es 
+significativo. Esto generalmente es porque la entrada corresponde a algún 
+movimiento en el mundo físico, y la salida esta relacionada con dicho 
+movimiento. El intervalo entre el tiempo de entrada y el de salida debe ser
+lo suficientemente pequeño para una temporalidad aceptable.
+
+La correción de un sistema en tiempo real no depende sólo del resultado 
+lógico de la computación, sino tambien del tiempo en el que se producen los 
+resultados.
+
 Tipos de sistemas en tiempo real:
 
-	Hard
-	Soft
+	Hard (estrictos) 
+		* Son los sistemas en los que es absolutamente imperativo
+		que las respuestas se produzcan dentro del tiempo límite
+		especificado.
+	Soft (no estrictos)
+		* Los tiempos de respuesta son importantes pero el sistema
+		seguirá funcionando correctamente aunque los tiempos límite
+		no se cumplan ocasionalmente.
 
 Caracteristicas de sistemas en tiempo real:
 
