Esqueleto con los distintos temas

--- a/tema01.tex
+++ b/tema01.tex
@@ -1,6 +1,6 @@
-Resumen Tema 1
+\section{Introducción a los Sistemas de Tiempo Real}
 
-Definición sistema en tiempo real:
+\subsection{Definición sistema en tiempo real}
 
 Cualquier sistema en el que el tiempo en el que se produce la salida es 
 significativo. Esto generalmente es porque la entrada corresponde a algún 
@@ -12,7 +12,7 @@ La correción de un sistema en tiempo real no depende sólo del resultado
 lógico de la computación, sino tambien del tiempo en el que se producen los 
 resultados.
 
-Tipos de sistemas en tiempo real:
+\subsection{Tipos de sistemas en tiempo real}
 
 	Hard (estrictos) 
 		* Son los sistemas en los que es absolutamente imperativo
@@ -23,12 +23,19 @@ Tipos de sistemas en tiempo real:
 		seguirá funcionando correctamente aunque los tiempos límite
 		no se cumplan ocasionalmente.
 
-Caracteristicas de sistemas en tiempo real:
+\subsection{Ejemplos de sistemas en tiempo real}
 
-	1. Funcionalidades en tiempo real
-	2. Control concurrente de sistemas separados
-	3. Programación de bajo nivel
-	4. Soporte a computación númerica
-	5. Grandes y complejos
-	6. Extremadamente fiables y seguros
-	7. Implementación eficiente y entorno de ejecución
+\subsection{Características de sistemas en tiempo real}
+
+Los sistemas en tiempo real tienen unas características especificas que los
+definen.
+
+\begin{enumerate}
+\item Funcionalidades en tiempo real
+\item Control concurrente de sistemas separados
+\item Programación de bajo nivel
+\item Soporte a computación númerica
+\item Grandes y complejos
+\item Extremadamente fiables y seguros
+\item Implementación eficiente y entorno de ejecución
+\end{enumerate}
