Introducción en cada tema

--- a/tema01.tex
+++ b/tema01.tex
@@ -8,6 +8,10 @@ movimiento en el mundo físico, y la salida esta relacionada con dicho
 movimiento. El intervalo entre el tiempo de entrada y el de salida debe ser
 lo suficientemente pequeño para una temporalidad aceptable.
 
+Cualquier actividad o sistema de proceso de información que tiene que responder
+a un estimulo de entrada generado externamente con un retardo finito y
+especificado.
+
 La correción de un sistema en tiempo real no depende sólo del resultado 
 lógico de la computación, sino tambien del tiempo en el que se producen los 
 resultados.
