--- a/tema02.tex
+++ b/tema02.tex
@@ -1,1 +1,7 @@
 \section{Fiabilidad y tolerancia a fallos}
+
+Este tema, junto con el tema 3, trata de la producción de componentes de
+software fiables. Aunque se realizan consideraciones sobre la prevención de
+fallos, la atención se dedica principalmente a la tolerancia a fallos. Se
+condirean las técnicas de recuperación de errores hacia adelante y hacia atrás.
+El manejo de excepciones se estudia en el siguiente tema.
