--- a/tema03.tex
+++ b/tema03.tex
@@ -1,1 +1,7 @@
 \section{Excepciones y manejo de excepciones}
+
+Se continúa con el estudio realizado en el tema anterior sobre la producción de
+componentes de software fiables, centrándose este tema en el manejo de las
+excepciones, estudiándose tanto los modelos de terminación como los de
+reanudación.
+
