--- a/tema05.tex
+++ b/tema05.tex
@@ -1,1 +1,6 @@
 \section{Sincronización y comunicación basada en variables compartidas}
+
+Este tema, junto con el siguiente, se centra en el estudio de la comunicación
+entre tareas. En concreto en este primer tema se escriben los métodos de
+variables compartidas, incluyendo la utilización de semáforos, monitories,
+variables compartidas y objetos protegidos.
