--- a/tema06.tex
+++ b/tema06.tex
@@ -1,1 +1,5 @@
 \section{Sincronización y comunicación basada en mensajes}
+
+Este tema es la continuación del anterior y resalta la importancia que tienen en
+los lenguajes modernos los métodos basados en mensajes para la comunicación y
+sincronización.
