--- a/tema07.tex
+++ b/tema07.tex
@@ -1,1 +1,6 @@
 \section{Acciones atómicas, Tareas Concurrentes y Fiabilidad}
+
+En este tema se amplian las discusiones iniciales sobre tolerancia a fallos
+describiendo con cuánta fiabilidad puede ser programada la cooperación entre
+procesos. Para esta discusión es fundamental la noción de acción atómica y las
+técnicas de manejo de eventos asíncronos.
