--- a/tema08.tex
+++ b/tema08.tex
@@ -1,1 +1,6 @@
 \section{Control de recursos}
+
+Como continuación del tema anterior, en este tema se tratan los procesos
+competitivos. Un tema importante en este caso es la distinción entre
+sincronización condicional y sincronización evitable en el modelo de
+concurrencia.
