--- a/tema10.tex
+++ b/tema10.tex
@@ -1,1 +1,6 @@
 \section{Planificación}
+
+Tras el tema anterior de capacidades de tiempo real, hay que incluir estas
+capacidades en la planificación de tareas, introduciéndose también la noción de
+prioridad junto con el análisis de la planificabilidad para sistemas con
+desalojo basado en prioridad.
