Documento inicial y algunos cambios

--- a/tema01.tex
+++ b/tema01.tex
@@ -17,16 +17,16 @@ lógico de la computación, sino tambien del tiempo en el que se producen los
 resultados.
 
 \subsection{Tipos de sistemas en tiempo real}
-
-	Hard (estrictos) 
-		* Son los sistemas en los que es absolutamente imperativo
+\begin{itemize}
+	\item Hard (estrictos) 
+		Son los sistemas en los que es absolutamente imperativo
 		que las respuestas se produzcan dentro del tiempo límite
 		especificado.
-	Soft (no estrictos)
-		* Los tiempos de respuesta son importantes pero el sistema
+	\item Soft (no estrictos)
+		Los tiempos de respuesta son importantes pero el sistema
 		seguirá funcionando correctamente aunque los tiempos límite
 		no se cumplan ocasionalmente.
-
+\end{itemize}
 \subsection{Ejemplos de sistemas en tiempo real}
 
 \subsection{Características de sistemas en tiempo real}
