--- a/tema01.tex
+++ b/tema01.tex
@@ -13,7 +13,7 @@ a un estimulo de entrada generado externamente con un retardo finito y
 especificado.
 
 La correción de un sistema en tiempo real no depende sólo del resultado 
-lógico de la computación, sino tambien del tiempo en el que se producen los 
+lógico de la computación, sino también del tiempo en el que se producen los 
 resultados.
 
 \subsection{Tipos de sistemas en tiempo real}
