Tema 3 y principio del tema 10

--- a/tema03.tex
+++ b/tema03.tex
@@ -62,7 +62,7 @@ Ada precisa que las excepciones se declaren como constantes, por ejemplo las
 excepciones que puede generar el entorno de ejecución se declaran en el paquete
 Standard.
 
-\begin{lstlistings}[language=ADA]
+\begin{lstlisting}[language=ADA]
 package Standard is
 ....
 Constraint_Error : exception;
@@ -71,7 +71,7 @@ Storage_Error : exception;
 Tasking_Error : exception;
 ...
 end Standard
-\end{lstlitings}
+\end{lstlisting}
 
 Java y C++ dan una visión de las excepciones más orientada al objeto. En java
 las excepciones son instancias de una subclase de la clase Throwable y podran
