--- a/tema07.tex
+++ b/tema07.tex
@@ -26,6 +26,27 @@ noción de acciones atómicas anidadas. Los procesos comprometidos en una acció
 anidada deben ser un subconjunto de los que están involucrados en el nivel
 externo de la acción.
 
+Las propiedades que tiene una acción atómica:
+
+\begin{itemize}
+	\item Una acción es atómica si los procesos que la realizan no saben de
+		la existencia de ningún otro proceso activo, y ningún otro
+		proceso activo tiene constancia de las actividades de los
+		procesos durante el tiempo que en el que están realizando la
+		acción.
+	\item Una acción es atómica si los procesos que la realizan no se
+		comunican con otros procesos mientras está siendo realizada la
+		acción.
+	\item Una acción es atómica si los procesos que la realizan no pueden
+		detectar ningún cambio de estado salvo aquellos realizados por
+		ellos mismos, y si no revelan sus cambios de estado hasta que la
+		acción se haya completado.
+	\item Las acciones son atómicas si, en lo que respecta a otros procesos,
+		pueden ser consideradas indivisibles e instantáneas, de forma
+		que los efectos sobre el sistema sean como si estuvieran
+		entrelazadas y no en concurrencia.
+\end{itemize}
+
 \subsection{Acciones atómicas recuperables}
 
 La expresión transacciones atómicas se ha utilizado frecuentemente en el marco
@@ -72,7 +93,7 @@ ocurrencia de enventos, como en las siguientes:
 		proceso necesita de la participación del resto de procesos en la
 		recuperación. Por ejemplo, un fallo hardware puede suponer que
 		el proceso nunca termine su ejecución prevista porque las
-		conjdiciones de comienzo ya no se cumple; el proceso puede que
+		condiciones de comienzo ya no se cumplen; el proceso puede que
 		nunca alcance su punto de sondeo. También podría ocurrir un
 		fallo de temporización, por lo que no se podría cumplir el plazo
 		límite de su servicio. En estas situaciones el proceso debe ser
@@ -112,3 +133,10 @@ ocurrencia de enventos, como en las siguientes:
 		porque han detectado una condición de error y desean comenzar de
 		nuevo.
 \end{itemize}
+
+Una aproximación al manejo asíncrono de notificación es abortar el proceso y
+permitir que otro proceso efectúe alguna forma de recuperación. Todos los
+sistemas operativos y la mayoría de los lenguajes de programación concurrente
+proporcionan esta disponibilidad. Sin embargo, el aborto de un proceso puede ser
+costoso y a menudo es una respuesta extrama a muchas condiciones de error.
+Consecuentemente, es necesario algún mecanismo de notificación asíncrona.
