Pequeños arreglos ped3

--- a/ped3.tex
+++ b/ped3.tex
@@ -27,7 +27,7 @@ Existen dos tipos de protocolos:
 \end{itemize}
 
 Cuando se utiliza cualquiera de estos dos protocolos en un sistema
-monoprocesador se cumplen lo siguiente:
+monoprocesador se cumple lo siguiente:
 
 \begin{itemize}
 	\item Un proceso de alta prioridad puede ser bloqueado por procesos de
